# DiffMITC3

./: CMakeLists.txt  Mitc3Optimizer.py  pyproject.toml  setup.py  test_cpp.cpp
DiffMITC3/: DiffMITC3.py  __init__.py
src/: math_util.hpp  pybind.cpp
